--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "puppeteer-api",
+  "name": "puppeteer-app",
   "version": "1.0.0",
+  "description": "Puppeteer scraper on Railway",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.3.8"
+    "puppeteer-core": "^22.8.2"
   }
 }
