--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "puppeteer-api",
+  "name": "metro-parser-api",
   "version": "1.0.0",
+  "description": "Парсер METRO: выдача JSON с названием, ценой, брендом и сетью",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer-core": "^21.11.0"
+    "axios": "^1.6.0",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
