--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "axios": "^1.6.8",
-    "express": "^4.18.2"
-  }
+ "dependencies": {
+  "axios": "^1.6.8",
+  "express": "^4.18.2",
+  "puppeteer": "^21.3.8"
+}
 }
